2023-05-08 Richard Frith-Macdonald <rfm@gnu.org>

        * Tools/AGSParser.m: Add support for OSX version numbers up to 15
	(and fix version 9).

2023-05-04 Frederik Seiffert <frederik@algoriddim.com>

	* Source/NSOrderedSet.m: Fix keyed encoding to match Apple platforms.

2023-05-04 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSFileHandle.m: Ignore notificaton that a descriptor is
	writable if we have nothing to be written.

2023-04-26 Frederik Seiffert <frederik@algoriddim.com>

	* Tests/base/NSFileManager/general.m:
	* Source/NSFileManager.m:
	Add test for and fix -[NSFileManager contentsOfDirectoryAtURL:...]
	implementation not working correctly if directory did not match
	current working directory.

2023-04-13 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSSocketPort.m: set listening socket into non-blocking mode
	if possible, so if multiple threads are using the same port we don't
	get one thread blocked waiting for an accept which was handled by
	another one.

2023-03-23 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSTimer.m: wrap call to block in exception handler (bug #289)

2023-01-13 Frederik Seiffert <frederik@algoriddim.com>

	* Source/Additions/GSInsensitiveDictionary.m:
	* Source/NSURLRequest.m:
	* Source/NSURLResponse.m:
	Fix NSURLSession header fields not always being matched case
	insensitive.

2023-01-13 Frederik Seiffert <frederik@algoriddim.com>

	* Source/GSEasyHandle.m:
	* Source/GSMultiHandle.m:
	* Source/GSTimeoutSource.h:
	* Source/GSTimeoutSource.m:
	* Source/NSURLSession.m:
	Fix NSURLSession memory management of libdispatch objects.
	* Source/GSHTTPURLProtocol.m:
	Fix overrelease.

2023-01-13 Frederik Seiffert <frederik@algoriddim.com>

	* Headers/Foundation/NSURLSession.h:
	* Source/NSURLSession.m:
	Add missing NSURLSession APIs.

2022-02-09 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSMime.m: ([GSMimeHeader setValue:]) do not set
	type/subtype information if the content-type header value  is not